--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -2,6 +2,9 @@ spring.datasource.url=${DATABASE_URL}
 
 server.port=${PORT:8080}
 
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
